# mimic-flow

./: .gitignore  LICENSE  README.md  mac_parse_demo.py  main.py  pyproject.toml  run.py
lib/ui-tars/: action_parser.py  prompt.py
lib/ui_tars/: action_parser.py
memory/: __init__.py  base.py  json_memory.py  session.py
processor/: __init__.py  audio_transcriber.py  video_processor.py
prompts/: planner.py  results_test_prompt.py  summary.py
provider/: __init__.py  batch_video_analyzer.py  glm_video_demo.py  openai_compat.py  zhipu.py
